make login proc

--- a/src/webAppBasepkg/tmpl/base.tmpl
+++ b/src/webAppBasepkg/tmpl/base.tmpl
@@ -19,6 +19,7 @@
         <footer>
             ${param.footer}
         </footer>
+        <script src="/functions.js"></script>
         ${script}
     </body>
 </html>
