--- a/src/webAppBasepkg/tmpl/base.tmpl
+++ b/src/webAppBasepkg/tmpl/base.tmpl
@@ -2,13 +2,14 @@
 #proc basePage(param: BasePageParams): string =
 #  let lnk = param.lnk.join("\n        ")
 #  let script = param.script.join("\n        ")
+#  let appName = if param.appName == "": "/" else: param.appName
 #  result = ""
 <!DOCTYPE html>
 <html lang="ja">
     <head>
         <meta charset="utf-8">
         <title>${param.title}</title>
-        <link type="text/css" rel="stylesheet" href="/body.css"/>
+        <link type="text/css" rel="stylesheet" href="${appName}body.css"/>
         ${lnk}
     </head>
     <body>
@@ -19,7 +20,8 @@
         <footer>
             ${param.footer}
         </footer>
-        <script src="/functions.js"></script>
+        <script>const appName = "${appName}";</script>
+        <script src="${appName}functions.js"></script>
         ${script}
     </body>
 </html>
