--- a/src/webAppBasepkg/tmpl/base.tmpl
+++ b/src/webAppBasepkg/tmpl/base.tmpl
@@ -9,6 +9,8 @@
     <head>
         <meta charset="utf-8">
         <title>${param.title}</title>
+        <link type="text/css" rel="stylesheet" href="${appName}milligram.min.css"/>
+        <link type="text/css" rel="stylesheet" href="${appName}milligram-opt.css"/>
         <link type="text/css" rel="stylesheet" href="${appName}menu.css"/>
         ${lnk}
     </head>
