--- a/src/html/popup.css
+++ b/src/html/popup.css
@@ -8,7 +8,7 @@
     top: 0px;
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: var(--nc-tx-1);
     opacity: 0.20;
     z-index: 10;
 }
@@ -21,7 +21,7 @@
     top: calc(10% - 16px);
     width: 80%;
     height: 80%;
-    background-color: white;
+    background-color: var(--nc-bg-1);
     border-radius: 5px;
     overflow: auto;
     z-index: 10;
