--- a/src/webAppBasepkg/tmpl/base.tmpl
+++ b/src/webAppBasepkg/tmpl/base.tmpl
@@ -7,9 +7,10 @@
     <head>
         <meta charset="utf-8">
         <title>${param.title}</title>
-        <link type="text/css" rel="stylesheet" href="${appName}/milligram.min.css"/>
-        <link type="text/css" rel="stylesheet" href="${appName}/milligram-opt.css"/>
+        <link type="text/css" rel="stylesheet" href="${appName}/new.min.css"/>
+        <link type="text/css" rel="stylesheet" href="${appName}/new-opt.css"/>
         <link type="text/css" rel="stylesheet" href="${appName}/menu.css"/>
+        <link type="text/css" rel="stylesheet" href="${appName}/form.css"/>
         ${param.lnk.join("\n" & ' '.repeat(8))}
     </head>
     <body>
