--- a/src/webAppBasepkg/tmpl/sample.tmpl
+++ b/src/webAppBasepkg/tmpl/sample.tmpl
@@ -2,6 +2,28 @@
 #proc samplePageBody(): string =
 #  result = ""
 <form id="samplefrm">
-    <label>input-title<input name="input1"/></label>
+    <label>title<input name="input1"/></label>
+    <label>other title<input name="input2"/></label>
+    <div>
+        <label><input type="checkbox" name="checkbox1"/>check box</label>
+    </div>
+    <fieldset>
+        <legend>radio</legend>
+        <div>
+            <label><input type="radio" name="radio"/>radio1</label>
+        </div>
+        <div>
+            <label><input type="radio" name="radio"/>radio2</label>
+        </div>
+    </fieldset>
+    <label>select
+        <select name="select1">
+            <option>opt1</option>
+            <option>opt2</option>
+        </select>
+    </label>
+    <label>textarea
+        <textarea name="textarea1"></textarea>
+    </label>
     <button>OK</button>
 </form>
