--- a/src/webAppBasepkg/tmpl/base.tmpl
+++ b/src/webAppBasepkg/tmpl/base.tmpl
@@ -9,8 +9,9 @@
         <title>${param.title}</title>
         <link type="text/css" rel="stylesheet" href="${appName}/new.min.css"/>
         <link type="text/css" rel="stylesheet" href="${appName}/new-opt.css"/>
-        <link type="text/css" rel="stylesheet" href="${appName}/menu.css"/>
         <link type="text/css" rel="stylesheet" href="${appName}/form.css"/>
+        <link type="text/css" rel="stylesheet" href="${appName}/table.css"/>
+        <link type="text/css" rel="stylesheet" href="${appName}/menu.css"/>
         ${param.lnk.join("\n" & ' '.repeat(8))}
     </head>
     <body>
