--- a/src/html/popup.css
+++ b/src/html/popup.css
@@ -3,11 +3,11 @@
 
 #lay {
     display: none;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
     background-color: var(--nc-tx-1);
     opacity: 0.20;
     z-index: 10;
@@ -15,12 +15,12 @@
 
 #pop {
     display: none;
-    position: absolute;
+    position: fixed;
     padding: 16px;
     left: calc(10% - 16px);
     top: calc(10% - 16px);
-    width: 80%;
-    height: 80%;
+    right: calc(10% - 16px);
+    bottom: calc(10% - 16px);
     background-color: var(--nc-bg-1);
     border-radius: 5px;
     overflow: auto;
