--- a/src/webAppBasepkg/tmpl/base.tmpl
+++ b/src/webAppBasepkg/tmpl/base.tmpl
@@ -7,6 +7,7 @@
     <head>
         <meta charset="utf-8">
         <title>${param.title}</title>
+        <link type="text/css" rel="stylesheet" href="https://fonts.xz.style/serve/inter.css"/>
         <link type="text/css" rel="stylesheet" href="${appName}/new.min.css"/>
         <link type="text/css" rel="stylesheet" href="${appName}/new-opt.css"/>
         <link type="text/css" rel="stylesheet" href="${appName}/form.css"/>
